--- a/Note-app/package.json
+++ b/Note-app/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "validator": "^13.1.1"
+    "chalk": "^4.1.0",
+    "validator": "^13.1.1",
+    "yargs": "^15.4.1"
   }
 }
