--- a/web-server/package.json
+++ b/web-server/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "hbs": "^4.1.1"
+    "hbs": "^4.1.1",
+    "request": "^2.88.2"
   },
   "devDependencies": {},
   "description": ""
